[package]
name = "tanklarkit"
version = "0.1.0"
authors = ["Aspect"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
tokio = { features = ["full"], version = "1.4.0" }
reqwest = "0.11.2"
serde_json = "1.0.64"
serde = "*"

[dependencies.twilight-cache-inmemory]
git = "https://github.com/UE2020/twilight.git"
branch = "trunk"

[dependencies.twilight-gateway]
git = "https://github.com/UE2020/twilight.git"
branch = "trunk"

[dependencies.twilight-http]
git = "https://github.com/UE2020/twilight.git"
branch = "trunk"

[dependencies.twilight-model]
git = "https://github.com/UE2020/twilight.git"
branch = "trunk"

[dependencies.twilight-embed-builder]
git = "https://github.com/UE2020/twilight.git"
branch = "trunk"
